# mal-rust-vi

./: Cargo.toml  LICENSE  README.md  gentests.pl
final/: Cargo.toml
final/src/: eval.rs  lib.rs  main.rs  parse.rs  prelude.mal  stdfn_io.rs  stdfn_part1.rs  stdfn_part2.rs  stdfn_part3.rs  stdfn_part5.rs  stdfn_utils.rs
step0/: Cargo.toml
step0/src/: lib.rs  main.rs  tests.rs
step1/: Cargo.toml
step1/src/: lib.rs  main.rs  mal.pest  parse.rs  tests.rs
step2/: Cargo.toml
step2/src/: lib.rs  main.rs  parse.rs
step2b/: Cargo.toml
step2b/src/: lib.rs  main.rs  mal.pest
step2c/: Cargo.toml
step2c/src/: lib.rs  main.rs  parse.rs  stdfn.rs  tests.rs
step3/: Cargo.toml
step3/src/: eval.rs  lib.rs  main.rs  parse.rs  stdfn.rs
step3b/: Cargo.toml
step3b/src/: eval.rs  lib.rs  main.rs
step3c/: Cargo.toml
step3c/src/: eval.rs  lib.rs  main.rs  stdfn.rs
step3d/: Cargo.toml
step3d/src/: lib.rs  main.rs  mal.pest  tests.rs
step4/: Cargo.toml
step4/src/: eval.rs  lib.rs  main.rs  mal.pest  parse.rs  prelude.mal  stdfn.rs  stdfn_part1.rs  stdfn_part2.rs  stdfn_utils.rs  tests.rs
step5/: Cargo.toml
step5/src/: eval.rs  lib.rs  main.rs  parse.rs  stdfn_part2.rs  stdfn_utils.rs  tests.rs
step6/: Cargo.toml
step6/src/: lib.rs  main.rs  mal.pest  parse.rs  prelude.mal  stdfn_io.rs  stdfn_part1.rs  stdfn_part2.rs  stdfn_part3.rs  stdfn_utils.rs  tests.rs
step7/: Cargo.toml
step7/src/: eval.rs  main.rs  stdfn_part1.rs  stdfn_part3.rs  stdfn_utils.rs  tests.rs
step8/: Cargo.toml
step8/src/: eval.rs  (+9 more)
step9/: Cargo.toml
stepA/: Cargo.toml
(+33 files in other folders)
