[workspace]
members = [
    "step0",
    "step1",
    "step2",
    "step2b",
    "step2c",
    "step3",
    "step3b",
    "step3c",
    "step3d",
    "step4",
    "step5",
    "step6",
    "step7",
    "step8",
    "step9",
    "stepA",
    "final",
]

#[replace]
#"pest-deconstruct:0.2.0" = {  git = "https://github.com/pest-parser/pest_deconstruct", branch = "better-runtime-enum-exhaustion-error"}
